[package]
name = "eatlink_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.15.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.12"
serde_json = "1.0.140"
once_cell = "1.21.3"
anyhow = "1.0.98"
chrono = "0.4.40"
